removed beam_search_decoder

--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -68,7 +68,7 @@
     "# Training parameters\n",
     "tf.app.flags.DEFINE_float('learning_rate', 0.0002, 'Learning rate')\n",
     "tf.app.flags.DEFINE_float('max_gradient_norm', 1.0, 'Clip gradients to this norm')\n",
-    "tf.app.flags.DEFINE_integer('batch_size', 100, 'Batch size')\n",
+    "tf.app.flags.DEFINE_integer('batch_size', 1, 'Batch size')\n",
     "tf.app.flags.DEFINE_integer('max_epochs', 30, 'Maximum # of training epochs')\n",
     "tf.app.flags.DEFINE_integer('max_load_batches', 20, 'Maximum # of batches to load at one time')\n",
     "tf.app.flags.DEFINE_integer('max_seq_length', 50, 'Maximum sequence length')\n",
@@ -297,8 +297,8 @@
     "                    if not FLAGS.write_n_best:\n",
     "                        break\n",
     "                            \n",
-    "                if idx % 100 == 0:\n",
-    "                    print '  {}th line decoded'.format(idx)\n",
+    "                if idx % 10 == 0:\n",
+    "                    print '  {}th batch decoded'.format(idx)\n",
     "            print 'Decoding terminated'\n",
     "        except IOError:\n",
     "            pass\n",
@@ -337,10 +337,6 @@
       "building encoder..\n",
       "building decoder and attention..\n",
       "use beamsearch decoding..\n",
-      "decoder_cell_zero_state\n",
-      "AttentionWrapperState(cell_state=LSTMStateTuple(c=<tf.Tensor 'decoder/AttentionWrapperZeroState/checked_cell_state:0' shape=(?, 1024) dtype=float32>, h=<tf.Tensor 'decoder/AttentionWrapperZeroState/checked_cell_state_1:0' shape=(?, 1024) dtype=float32>), attention=<tf.Tensor 'decoder/AttentionWrapperZeroState/zeros_1:0' shape=(500, 1024) dtype=float32>, time=<tf.Tensor 'decoder/AttentionWrapperZeroState/zeros:0' shape=() dtype=int32>, alignments=<tf.Tensor 'decoder/AttentionWrapperZeroState/zeros_2:0' shape=(500, ?) dtype=float32>, alignment_history=())\n",
-      "decoder_cell.state_size\n",
-      "AttentionWrapperState(cell_state=LSTMStateTuple(c=1024, h=1024), attention=1024, time=TensorShape([]), alignments=<tf.Tensor 'decoder/LuongAttention/Slice:0' shape=(1,) dtype=int32>, alignment_history=())\n",
       "building beamsearch decoder..\n",
       "Reloading model parameters..\n",
       "INFO:tensorflow:Restoring parameters from model/translate.ckpt-660\n",
