--- a/train.ipynb
+++ b/train.ipynb
@@ -2,29 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
+    "#!/usr/bin/env python\n",
+    "# coding: utf-8\n",
+    "\n",
     "import os\n",
     "import math\n",
     "import time\n",
+    "import json\n",
     "import random\n",
-    "import numpy as np\n",
     "\n",
-    "import tensorflow as tf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "from collections import OrderedDict\n",
+    "\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "\n",
     "from data.data_iterator import TextIterator\n",
     "from data.data_iterator import BiTextIterator\n",
     "\n",
@@ -37,17 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Data loading parameters\n",
     "tf.app.flags.DEFINE_string('source_vocabulary', 'data/europarl-v7.1.4M.de.json', 'Path to source vocabulary')\n",
     "tf.app.flags.DEFINE_string('target_vocabulary', 'data/europarl-v7.1.4M.fr.json', 'Path to target vocabulary')\n",
-    "tf.app.flags.DEFINE_string('source_train_data', 'data/newstest2012.bpe.de', 'Path to source training data')\n",
-    "tf.app.flags.DEFINE_string('target_train_data', 'data/newstest2012.bpe.fr', 'Path to target training data')\n",
+    "tf.app.flags.DEFINE_string('source_train_data', 'data/europarl-v7.1.4M.de', 'Path to source training data')\n",
+    "tf.app.flags.DEFINE_string('target_train_data', 'data/europarl-v7.1.4M.fr', 'Path to target training data')\n",
     "tf.app.flags.DEFINE_string('source_valid_data', 'data/newstest2012.bpe.de', 'Path to source validation data')\n",
     "tf.app.flags.DEFINE_string('target_valid_data', 'data/newstest2012.bpe.fr', 'Path to target validation data')\n",
     "\n",
@@ -55,43 +52,35 @@
     "tf.app.flags.DEFINE_string('cell_type', 'lstm', 'RNN cell for encoder and decoder, default: lstm')\n",
     "tf.app.flags.DEFINE_string('attention_type', 'bahdanau', 'Attention mechanism: (bahdanau, luong), default: bahdanau')\n",
     "tf.app.flags.DEFINE_integer('hidden_units', 1024, 'Number of hidden units in each layer')\n",
-    "tf.app.flags.DEFINE_integer('depth', 2, 'Number of layers in each encoder and decoder')\n",
+    "tf.app.flags.DEFINE_integer('depth', 4, 'Number of layers in each encoder and decoder')\n",
     "tf.app.flags.DEFINE_integer('embedding_size', 500, 'Embedding dimensions of encoder and decoder inputs')\n",
     "tf.app.flags.DEFINE_integer('num_encoder_symbols', 30000, 'Source vocabulary size')\n",
     "tf.app.flags.DEFINE_integer('num_decoder_symbols', 30000, 'Target vocabulary size')\n",
     "\n",
     "tf.app.flags.DEFINE_boolean('use_residual', True, 'Use residual connection between layers')\n",
-    "tf.app.flags.DEFINE_boolean('attn_input_feeding', True, 'Use input feeding method in attentional decoder')\n",
+    "tf.app.flags.DEFINE_boolean('attn_input_feeding', False, 'Use input feeding method in attentional decoder')\n",
     "tf.app.flags.DEFINE_boolean('use_dropout', True, 'Use dropout in each rnn cell')\n",
     "tf.app.flags.DEFINE_float('dropout_rate', 0.3, 'Dropout probability for input/output/state units (0.0: no dropout)')\n",
     "\n",
     "# Training parameters\n",
     "tf.app.flags.DEFINE_float('learning_rate', 0.0002, 'Learning rate')\n",
     "tf.app.flags.DEFINE_float('max_gradient_norm', 1.0, 'Clip gradients to this norm')\n",
-    "tf.app.flags.DEFINE_integer('batch_size', 80, 'Batch size')\n",
+    "tf.app.flags.DEFINE_integer('batch_size', 128, 'Batch size')\n",
     "tf.app.flags.DEFINE_integer('max_epochs', 10, 'Maximum # of training epochs')\n",
     "tf.app.flags.DEFINE_integer('max_load_batches', 20, 'Maximum # of batches to load at one time')\n",
     "tf.app.flags.DEFINE_integer('max_seq_length', 50, 'Maximum sequence length')\n",
     "tf.app.flags.DEFINE_integer('display_freq', 100, 'Display training status every this iteration')\n",
-    "tf.app.flags.DEFINE_integer('save_freq', 500, 'Save model checkpoint every this iteration')\n",
-    "tf.app.flags.DEFINE_integer('valid_freq', 500, 'Evaluate model every this iteration: valid_data needed')\n",
+    "tf.app.flags.DEFINE_integer('save_freq', 11500, 'Save model checkpoint every this iteration')\n",
+    "tf.app.flags.DEFINE_integer('valid_freq', 1150000, 'Evaluate model every this iteration: valid_data needed')\n",
     "tf.app.flags.DEFINE_string('optimizer', 'adam', 'Optimizer for training: (adadelta, adam, rmsprop)')\n",
     "tf.app.flags.DEFINE_string('model_dir', 'model/', 'Path to save model checkpoints')\n",
     "tf.app.flags.DEFINE_string('summary_dir', 'model/summary', 'Path to save model summary')\n",
     "tf.app.flags.DEFINE_string('model_name', 'translate.ckpt', 'File name used for model checkpoints')\n",
     "tf.app.flags.DEFINE_boolean('shuffle_each_epoch', True, 'Shuffle training dataset for each epoch')\n",
     "tf.app.flags.DEFINE_boolean('sort_by_length', True, 'Sort pre-fetched minibatches by their target sequence lengths')\n",
-    "\n",
-    "# Decoding parameters\n",
-    "tf.app.flags.DEFINE_boolean('decode', True, 'Use decode mode')\n",
-    "tf.app.flags.DEFINE_integer('beam_width', 5, 'Beam width used in beamsearch')\n",
-    "tf.app.flags.DEFINE_integer('max_decode_step', 500, 'Maximum time step limit to decode')\n",
-    "tf.app.flags.DEFINE_boolean('write_n_best', True, 'Write n-best list (n=beam_width)')\n",
-    "tf.app.flags.DEFINE_string('decode_input', 'data/newstest2012.bpe.de', 'Decoding input path')\n",
-    "tf.app.flags.DEFINE_string('decode_output', 'data/newstest2012.bpe.de.trans', 'Decoding output path')\n",
+    "tf.app.flags.DEFINE_boolean('use_fp16', False, 'Use half precision float16 instead of float32 as dtype')\n",
     "\n",
     "# Runtime parameters\n",
-    "tf.app.flags.DEFINE_boolean('use_fp16', False, 'Use half precision float16 instead of float32 as dtype')\n",
     "tf.app.flags.DEFINE_boolean('allow_soft_placement', True, 'Allow device soft placement')\n",
     "tf.app.flags.DEFINE_boolean('log_device_placement', False, 'Log placement of ops on devices')\n",
     "\n",
@@ -100,36 +89,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def create_model(session, FLAGS):\n",
-    "    run_mode = 'decode' if FLAGS.decode else 'train'\n",
-    "    \n",
-    "    print 'Running in \"{}\" mode'.format(run_mode.upper())\n",
-    "    model = Seq2SeqModel(FLAGS, run_mode)\n",
-    "    \n",
+    "\n",
+    "    config = OrderedDict(sorted(FLAGS.__flags.items()))\n",
+    "    model = Seq2SeqModel(config, 'train')\n",
+    "\n",
     "    ckpt = tf.train.get_checkpoint_state(FLAGS.model_dir)\n",
     "    if ckpt and tf.train.checkpoint_exists(ckpt.model_checkpoint_path):\n",
     "        print 'Reloading model parameters..'\n",
     "        model.restore(session, ckpt.model_checkpoint_path)\n",
     "        \n",
     "    else:\n",
+    "        if not os.path.exists(FLAGS.model_dir):\n",
+    "            os.makedirs(FLAGS.model_dir)\n",
     "        print 'Created new model parameters..'\n",
     "        session.run(tf.global_variables_initializer())\n",
-    "        \n",
+    "   \n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -176,7 +165,7 @@
     "        print 'Training..'\n",
     "        for epoch_idx in xrange(FLAGS.max_epochs):\n",
     "            if model.global_epoch_step.eval() >= FLAGS.max_epochs:\n",
-    "                print 'Training is already complete.' \\\n",
+    "                print 'Training is already complete.', \\\n",
     "                      'current epoch:{}, max epoch:{}'.format(model.global_epoch_step.eval(), FLAGS.max_epochs)\n",
     "                break\n",
     "\n",
@@ -241,6 +230,9 @@
     "                    print 'Saving the model..'\n",
     "                    checkpoint_path = os.path.join(FLAGS.model_dir, FLAGS.model_name)\n",
     "                    model.save(sess, checkpoint_path, global_step=model.global_step)\n",
+    "                    json.dump(model.config,\n",
+    "                              open('%s-%d.json' % (checkpoint_path, model.global_step.eval()), 'wb'),\n",
+    "                              indent=2)\n",
     "\n",
     "            # Increase the epoch index of the model\n",
     "            model.global_epoch_step_op.eval()\n",
@@ -249,160 +241,25 @@
     "        print 'Saving the last model..'\n",
     "        checkpoint_path = os.path.join(FLAGS.model_dir, FLAGS.model_name)\n",
     "        model.save(sess, checkpoint_path, global_step=model.global_step)\n",
+    "        json.dump(model.config,\n",
+    "                  open('%s-%d.json' % (checkpoint_path, model.global_step.eval()), 'wb'),\n",
+    "                  indent=2)\n",
     "        \n",
     "    print 'Training Terminated'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def decode():\n",
-    "    # Load source data to decode\n",
-    "    test_set = TextIterator(source=FLAGS.decode_input,\n",
-    "                            source_dict=FLAGS.source_vocabulary,\n",
-    "                            batch_size=FLAGS.batch_size,\n",
-    "                            maxlen=None,\n",
-    "                            n_words_source=FLAGS.num_encoder_symbols)\n",
-    "\n",
-    "    # Load inverse dictionary used in decoding\n",
-    "    target_inverse_dict = data_utils.load_inverse_dict(FLAGS.target_vocabulary)\n",
-    "    \n",
-    "    # Initiate TF session\n",
-    "    with tf.Session(config=tf.ConfigProto(allow_soft_placement=FLAGS.allow_soft_placement, \n",
-    "        log_device_placement=FLAGS.log_device_placement, gpu_options=tf.GPUOptions(allow_growth=True))) as sess:\n",
-    "\n",
-    "        # Reload existing checkpoint\n",
-    "        model = create_model(sess, FLAGS)\n",
-    "        try:\n",
-    "            print 'Decoding {}..'.format(FLAGS.decode_input)\n",
-    "            if FLAGS.write_n_best:\n",
-    "                fout = [data_utils.fopen((\"%s_%d\" % (FLAGS.decode_output, k)), 'w') \\\n",
-    "                        for k in range(FLAGS.beam_width)]\n",
-    "            else:\n",
-    "                fout = [data_utils.fopen(FLAGS.decode_output, 'w')]\n",
-    "            \n",
-    "            for idx, source_seq in enumerate(test_set):\n",
-    "                source, source_len = prepare_batch(source_seq)\n",
-    "                # predicted_ids: GreedyDecoder; [batch_size, max_time_step, 1]\n",
-    "                # BeamSearchDecoder; [batch_size, max_time_step, beam_width]\n",
-    "                predicted_ids = model.predict(sess, encoder_inputs=source, \n",
-    "                                              encoder_inputs_length=source_len)\n",
-    "                   \n",
-    "                # Write decoding results\n",
-    "                for k, f in reversed(list(enumerate(fout))):\n",
-    "                    for seq in predicted_ids:\n",
-    "                        f.write(str(data_utils.seq2words(seq[:,k], target_inverse_dict)) + '\\n')\n",
-    "                    if not FLAGS.write_n_best:\n",
-    "                        break\n",
-    "                print '  {}th line decoded'.format(idx * FLAGS.batch_size)\n",
-    "                \n",
-    "            print 'Decoding terminated'\n",
-    "        except IOError:\n",
-    "            pass\n",
-    "        finally:\n",
-    "            [f.close() for f in fout]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "def main(_):\n",
-    "    if FLAGS.decode:\n",
-    "        decode()\n",
-    "    else:\n",
-    "        train()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running in \"DECODE\" mode\n",
-      "building model..\n",
-      "building encoder..\n",
-      "building decoder and attention..\n",
-      "use beamsearch decoding..\n",
-      "building beamsearch decoder..\n",
-      "Reloading model parameters..\n",
-      "INFO:tensorflow:Restoring parameters from model/translate.ckpt-600\n",
-      "model restored from model/translate.ckpt-600\n",
-      "Decoding..\n",
-      "  0th line decoded\n",
-      "  80th line decoded\n",
-      "  160th line decoded\n",
-      "  240th line decoded\n",
-      "  320th line decoded\n",
-      "  400th line decoded\n",
-      "  480th line decoded\n",
-      "  560th line decoded\n",
-      "  640th line decoded\n",
-      "  720th line decoded\n",
-      "  800th line decoded\n",
-      "  880th line decoded\n",
-      "  960th line decoded\n",
-      "  1040th line decoded\n",
-      "  1120th line decoded\n",
-      "  1200th line decoded\n",
-      "  1280th line decoded\n",
-      "  1360th line decoded\n",
-      "  1440th line decoded\n",
-      "  1520th line decoded\n",
-      "  1600th line decoded\n",
-      "  1680th line decoded\n",
-      "  1760th line decoded\n",
-      "  1840th line decoded\n",
-      "  1920th line decoded\n",
-      "  2000th line decoded\n",
-      "  2080th line decoded\n",
-      "  2160th line decoded\n",
-      "  2240th line decoded\n",
-      "  2320th line decoded\n",
-      "  2400th line decoded\n",
-      "  2480th line decoded\n",
-      "  2560th line decoded\n",
-      "  2640th line decoded\n",
-      "  2720th line decoded\n",
-      "  2800th line decoded\n",
-      "  2880th line decoded\n",
-      "  2960th line decoded\n",
-      "Decoding terminated\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "To exit: use 'exit', 'quit', or Ctrl-D.\n"
-     ]
-    }
-   ],
-   "source": [
+    "    train()\n",
+    "\n",
+    "\n",
     "if __name__ == '__main__':\n",
     "    tf.app.run()"
    ]
