--- a/train.ipynb
+++ b/train.ipynb
@@ -52,7 +52,7 @@
     "tf.app.flags.DEFINE_string('cell_type', 'lstm', 'RNN cell for encoder and decoder, default: lstm')\n",
     "tf.app.flags.DEFINE_string('attention_type', 'bahdanau', 'Attention mechanism: (bahdanau, luong), default: bahdanau')\n",
     "tf.app.flags.DEFINE_integer('hidden_units', 1024, 'Number of hidden units in each layer')\n",
-    "tf.app.flags.DEFINE_integer('depth', 4, 'Number of layers in each encoder and decoder')\n",
+    "tf.app.flags.DEFINE_integer('depth', 2, 'Number of layers in each encoder and decoder')\n",
     "tf.app.flags.DEFINE_integer('embedding_size', 500, 'Embedding dimensions of encoder and decoder inputs')\n",
     "tf.app.flags.DEFINE_integer('num_encoder_symbols', 30000, 'Source vocabulary size')\n",
     "tf.app.flags.DEFINE_integer('num_decoder_symbols', 30000, 'Target vocabulary size')\n",
@@ -154,6 +154,9 @@
     "    with tf.Session(config=tf.ConfigProto(allow_soft_placement=FLAGS.allow_soft_placement, \n",
     "        log_device_placement=FLAGS.log_device_placement, gpu_options=tf.GPUOptions(allow_growth=True))) as sess:\n",
     "\n",
+    "        # Create a log writer object\n",
+    "        log_writer = tf.summary.FileWriter(FLAGS.model_dir, graph=sess.graph)\n",
+    "        \n",
     "        # Create a new model or reload existing checkpoint\n",
     "        model = create_model(sess, FLAGS)\n",
     "\n",
@@ -178,8 +181,8 @@
     "                    continue\n",
     "\n",
     "                # Execute a single training step\n",
-    "                step_loss = model.train(sess, encoder_inputs=source, encoder_inputs_length=source_len, \n",
-    "                                        decoder_inputs=target, decoder_inputs_length=target_len)\n",
+    "                step_loss, summary = model.train(sess, encoder_inputs=source, encoder_inputs_length=source_len, \n",
+    "                                                 decoder_inputs=target, decoder_inputs_length=target_len)\n",
     "\n",
     "                loss += float(step_loss) / FLAGS.display_freq\n",
     "                words_seen += float(np.sum(source_len+target_len))\n",
@@ -203,6 +206,9 @@
     "                    words_seen = 0\n",
     "                    sents_seen = 0\n",
     "                    start_time = time.time()\n",
+    "                    \n",
+    "                    # Record training summary for the current batch\n",
+    "                    log_writer.add_summary(summary, model.global_step.eval())\n",
     "\n",
     "                # Execute a validation step\n",
     "                if valid_set and model.global_step.eval() % FLAGS.valid_freq == 0:\n",
